# istio-sdk-rs

./: Cargo.toml  README.md
examples/: example.rs  test.yaml
src/: lib.rs
src/v1_18_0/: crds.all.yaml  mod.rs
src/v1_18_0/extensions/: extensions.rs  extensions.yaml
src/v1_18_0/networking/v1alpha3/: envoyfilters.rs  envoyfilters.yaml
src/v1_18_0/networking/v1beta1/: destination_rule.rs  destinationrules.yaml  gateway.rs  gateways.yaml  mod.rs  proxyconfigs.rs  proxyconfigs.yaml  serviceentries.rs  serviceentries.yaml  sidecars.rs  sidecars.yaml  virtual_service.rs  virtualservices.yaml  workloadentries.rs  workloadentries.yaml  workloadgroups.rs  workloadgroups.yaml
src/v1_18_0/security/: authorizationpolicies.rs  authorizationpolicies.yaml  peerauthentications.rs  peerauthentications.yaml  requestauthentications.rs  requestauthentications.yaml
src/v1_18_0/telemetry/: telemetries.rs  telemetries.yaml
src/v1_18_0/types/: mod.rs
