[package]
name = "istio-sdk"
version = "0.1.1"
authors = ["Shouer.Shen"]
edition = "2021"
description = "A collection of CRDs for api used in Istio."
license = "Apache-2.0"
keywords = ["istio"]
homepage = "https://github.com/shenshouer/istio-sdk-rs"
repository = "https://github.com/shenshouer/istio-sdk-rs"
documentation = "https://docs.rs/istio-sdk"
readme = "README.md"

[dev-dependencies]
anyhow = "1.0.72"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde_yaml = "0.9.25"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
schemars = "^0.8"
k8s-openapi = { version = "^0.18.0" }
kube = { version = "0.84.0", features = ["derive"] }

[features]
default = ["v1_18"]
v1_10 = []
v1_11 = []
v1_12 = []
v1_13 = []
v1_14 = []
v1_15 = []
v1_16 = []
v1_17 = []
v1_18 = []

[package.metadata.docs.rs]
features = ["v1_18"]
